force-app/main/default/objects/ISO_Partner__c/ISO_Partner__c.object-meta.xml
<CustomObject>
    <label>ISO Partner</label>
    <nameField>
        <label>ISO Lead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ISO Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>