force-app/main/default/objects/ISO_Partner__c/fields/Calendly_Booking_Link__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Booking_Link__c</fullName>
    <label>Calendly Booking Link</label>
    <type>Url</type>
</CustomField>