force-app/main/default/objects/ISO_Partner__c/fields/Cancelled_ISO__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_ISO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancelled ISO</label>
    <type>Checkbox</type>
</CustomField>