force-app/main/default/objects/ISO_Partner__c/fields/Commission_Structure2__c.field-meta.xml
<CustomField>
    <fullName>Commission_Structure2__c</fullName>
    <label>Commission Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10%</fullName>
            </value>
            <value>
                <fullName>30%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>