force-app/main/default/objects/ISO_Partner__c/fields/Onboarding_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Call_Date__c</fullName>
    <label>Onboarding Call Date</label>
    <type>DateTime</type>
</CustomField>