force-app/main/default/objects/ISO_Partner__c/fields/Primary_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Phone__c</fullName>
    <label>Primary Contact Phone</label>
    <type>Phone</type>
</CustomField>