force-app/main/default/objects/ISO_Partner__c/fields/Primary_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Primary_Vertical__c</fullName>
    <label>Primary Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consumer Debt</fullName>
            </value>
            <value>
                <fullName>Equipment Finance</fullName>
            </value>
            <value>
                <fullName>Funding</fullName>
            </value>
            <value>
                <fullName>MCA (Merchant Cash Advance)</fullName>
            </value>
            <value>
                <fullName>Renegotiation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>