force-app/main/default/objects/ISO_Partner__c/fields/Quick_Notes__c.field-meta.xml
<CustomField>
    <fullName>Quick_Notes__c</fullName>
    <label>Quick Notes</label>
    <length>250</length>
    <type>Text</type>
</CustomField>