force-app/main/default/objects/ISO_Partner__c/fields/Referral_Office__c.field-meta.xml
<CustomField>
    <fullName>Referral_Office__c</fullName>
    <label>Referral Office</label>
    <length>60</length>
    <type>Text</type>
</CustomField>