force-app/main/default/objects/ISO_Partner__c/fields/Sales_Rep_Count__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Count__c</fullName>
    <label>Sales Rep Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>