force-app/main/default/objects/ISO_Partner__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appointment Scheduled</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Contract Out</fullName>
            </value>
            <value>
                <fullName>Contract Signed</fullName>
            </value>
            <value>
                <fullName>Onboarding Scheduled</fullName>
            </value>
            <value>
                <fullName>Active Partner</fullName>
            </value>
            <value>
                <fullName>Nurturing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>