force-app/main/default/objects/ISO_Partner__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>Street</label>
    <length>60</length>
    <type>Text</type>
</CustomField>