force-app/main/default/objects/ISO_Partner__c/validationRules/Cancelled_ISO.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancelled_ISO</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Cancelled_ISO__c = TRUE,
    ISBLANK(Cancellation_Reason__c)
)</errorConditionFormula>
    <errorMessage>Cancellation Reason must be filled out when Cancelled ISO is checked</errorMessage>
</ValidationRule>